<resources>
    <string name="app_name">BeHappy</string>

    <string name="hello_world">Hello world!</string>
    <string name="question">Are you happy?</string>
    <string name="yes">Yes!</string>
    <string name="no">No!</string>
    <string name="title_activity_picture">Picture!</string>
    <string name="action_settings">Settings</string>
    <string name="better">Better?</string>
    <string name="img_description">image</string>
</resources>
