<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:weightSum="1"
    android:orientation="vertical"
    android:background="#FFFFFF"
    >

    <TextView
        android:id="@+id/searchBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="100dp"
        android:hint="@string/question"
        android:gravity="center_horizontal"

        />

    <Button
        android:id="@+id/yesButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/yes"
        android:onClick="getPic" />

    <Button
        android:id="@+id/noButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/no"
        android:onClick="getPic" />


</LinearLayout>
